# GloK

./: CMakeLists.txt  README.md  main.cpp
3dmodel/prototype/v1/case_for_main_board/: mainboard v1.f3d
3dmodel/prototype/v1/case_for_sensor/: sensor_case_mpu6050.f3d
adapters/: i_adapter.h
adapters/bluetooth/: bluetooth_reader.h
adapters/bluetooth/src/: connect_to_point.cpp  constuctor.cpp  get_name_points.cpp
adapters/file_reader/: file_reader_adapter.h
adapters/file_reader/src/: connect_to_point.cpp  constructor.cpp  get_and_change_file_name.cpp  get_points.cpp  read_config.cpp  read_data.cpp
adapters/iadapter/: constructor.cpp  get_data.cpp  update_geometry.cpp  update_rotate.cpp
adapters/serial_port_redaer/: serial_port_reader.h
adapters/serial_port_redaer/src/: connect_to_point.cpp  constructor.cpp  get_name_points.cpp  hande_new_data.cpp
circuit/pcb/: PCB_GloK_easyeda.json
circuit/schematic/: SCH_GloK_easyeda.json
example_data/: copy_input  example_input_update.json
gestrure_handler/keyboard/: KeyboardController.h
gestrure_handler/mouse/: MouseController.h
gestrure_handler/mouse/constructor/: calibrate.cpp  constructor.cpp  update.cpp
item/: adapter_item.h  item.h
item/src_adapter_item/: constructor.cpp  delete_item.cpp  get_item.cpp
item/src_item/: calculate_end_pos.cpp  check_input.cpp  constructor.cpp  coord.cpp  draw.cpp  geometry.cpp  name.cpp  parent.cpp  rotate.cpp
programm/frontend/: README.md  index.html  package-lock.json  package.json
programm/frontend/src/: App.vue  main.ts
programm/frontend/src/components/: TheHomeSection.vue
programm/frontend/src/components/Navbar/: NavThemeSwitcher.vue  TheNavbar.vue
programm/frontend/src/stores/: coreStore.ts
programm/visual/processing/visualize_movement/: sketch_230106a.pde
windows/3dgraphics/: widget3d.h
windows/3dgraphics/src/: constructor.cpp  cube.cpp  initializegl.cpp  mouseevents.cpp  paintgl.cpp  resizegl.cpp
windows/mainwindow/: mainwindow.h
windows/mainwindow/src/: constructor.cpp
windows/side/: side.h
windows/side/item_widget_settings/: item_widget.h
windows/side/item_widget_settings/src/: constructor.cpp  label_parent.cpp  layout.cpp  lineeditparam.cpp  manual_updated.cpp  posSlider.cpp  rotSlider.cpp  signals_linker.cpp  slot_line_edit.cpp  slot_slider_pos_edit.cpp  slot_slider_rotate_axis.cpp  update_all.cpp
windows/side/item_widget_settings/widget_serial_port_connection/: widget_serial_port_connection.h
windows/side/item_widget_settings/widget_serial_port_connection/src/: constructor.cpp  slots.cpp
windows/side/src/: constructor.cpp
